--- a/templates/post.html
+++ b/templates/post.html
@@ -10,7 +10,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="post-heading">
                             <h1>{{post.title}}</h1>
-                            <h2 class="subheading">You can add your Subheading</h2>
+                            <h2 class="subheading">{{post.tag_line}}</h2>
                             <span class="meta">
                                 Posted by
                                 <a href="#!">Admin</a>
