--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Signin Template for Bootstrap</title>
+    <title>Signin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
  <link href="{{url_for('static',filename='css/signin.css')}}" rel="stylesheet">
@@ -20,9 +20,9 @@
       <img class="mb-4" src="{{url_for('static',filename = fname)}}" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Login</h1>
       
-      <input type="email" id="inputEmail" class="form-control" placeholder="Email Address" required autofocus>
+      <input type="text" id="uname" name="uname"  class="form-control" placeholder="User Name" required autofocus>
       
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+      <input type="password" id="pass" name="pass" class="form-control" placeholder="Password" required>
       <div class="checkbox mb-3">
         <label>
           <input type="checkbox" value="remember-me">Remember me
