Added a function to delete the posts and to Logout from the Admin Panel and completed the work of Pagination.

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -53,7 +53,7 @@
                         </div>
 
                         <div class="form-floating">
-                            <input class="form-control" id="img_file" name="img_file" placeholder="Enter your image file here..." style="height: 12rem" value="img_file">
+                            <input class="form-control" id="img_file" name="img_file" placeholder="Enter your image file here..." style="height: 12rem" value="{{post.img_file}}">
                             <label for="img_file">Image File</label>
                         </div>
 
