--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -26,7 +26,10 @@
 
 
                     <h1>Upload a File</h1>
-                        We will add file uploader here
+                        <form action="/uploader" method="post" enctype="multipart/form-data">
+                          <input type="file" name="file1">
+                          <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
                         <hr>
 
 
@@ -53,7 +56,7 @@
                             <td>{{post.title}}</td>
                             <td>{{post.date}}</td>
                             <td><a href="/edit/{{post.sno}}"><button class="btn btn-primary">Edit</button></a></td>
-                            <td><button class="btn btn-primary">Delete</button></td>
+                            <td><a href="/delete/{{post.sno}}"><button class="btn btn-primary">Delete</button></a></td>
                           </tr>
                           {% endfor %}
 
