--- a/templates/index.html
+++ b/templates/index.html
@@ -48,10 +48,8 @@
 
                     <!-- Pager-->
                     <div class="clearfix">
-                        {% if number!=0 %}
-                        <a class="btn btn-primary float-left" href="/">&larr; Newer Posts</a>
-                        {% endif %}
-                        <a class="btn btn-primary float-right" href="">Older Posts</a>
+                        <a class="btn btn-primary float-left" href="{{prev}}">&larr; Previous</a>
+                        <a class="btn btn-primary float-right" href="{{next}}">Next &rarr;</a>
                     </div>
                 </div>
             </div>
